Attempt to get FAME to run in a stable manner
This failed. I might come back to this at some later point,
But I am now first going to try if LETHE is more runnable.